urm/tests/macro_error/foreign.stderr
error: Self-referential not supported (yet?)
 --> tests/macro_error/foreign.rs:9:15
  |
9 |     #[foreign(Self(id) => Self(id))]
  |               ^^^^

error: No Self(..) found
  --> tests/macro_error/foreign.rs:12:15
   |
12 |     #[foreign(Bar(id) => Bar(id))]
   |               ^^^
